update: adding missing end points
